--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node"
   ],
   "engines": {
-    "node": ">=8.12.0",
+    "node": ">=8.12.0 <=16.5.0",
     "npm": ">=6.4.1"
   },
   "scripts": {
